<resources>
    <string name="app_name">AvayeElahi</string>
    <string name="app_name_fa">آوای الهی</string>
    <string name="app_version">1.0.0</string>

    <!--Activity Main-->
    <string name="main_date_shamshi">تاریخ شمسی</string>
    <string name="main_date_miladi">تاریخ میلادی</string>
    <string name="main_date_ghamari">تاریخ قمری</string>
    <string name="main_time_for_next_azan">زمان باقیمانده تا اذان بعدی</string>
    <string name="main_azan_sobh">صبح</string>
    <string name="main_tolu">طلوع</string>
    <string name="main_azan_zhohr">ظهر</string>
    <string name="main_azan_asr">عصر</string>
    <string name="main_azan_maghreb">مغرب</string>
    <string name="main_azan_eshaa">عشاء</string>
    <string name="main_menu_header_next_azan_text">اذان بعدی </string>
    <string name="main_menu_header_today_text">تاریخ امروز </string>
    <string name="main_location">مکان</string>

    <!--Activity Names-->
    <string name="app_Description">توضیحات</string>
    <string name="app_activity_about_us">درباره ما</string>
    <string name="app_activity_tasbih">تسبیح</string>
    <string name="app_activity_zekr_shomar">ذکر شمار</string>
    <string name="app_activity_azkar_rouzaneh">اذکار روزانه</string>
    <string name="app_activity_compass">قبله نما</string>
    <string name="app_activity_change_date">تبدیل تاریخ</string>
    <string name="app_activity_settings">تنظیمات</string>
    <string name="app_activity_calendar">تقویم</string>
    <string name="app_activity_holidays">تعطیلات سال</string>
    <string name="app_activity_asma_allah">اسماء خدا</string>
    <string name="app_activity_guide_compass">راهنمای قبله نما</string>

    <!--Days of week-->
    <string name="shanbeh">شنبه</string>
    <string name="yek_shanbeh">یکشنبه</string>
    <string name="do_shanbeh">دوشنبه</string>
    <string name="se_shanbeh">سه شنبه</string>
    <string name="chahar_shanbeh">چهارشنبه</string>
    <string name="panj_shanbeh">پنجشنبه</string>
    <string name="jomee">جمعه</string>

    <!--manths of year-->
    <string name="farvardin">فروردین</string>
    <string name="ordibehesht">اردیبهشت</string>
    <string name="khordad">خرداد</string>
    <string name="tir">تیر</string>
    <string name="mordad">مرداد</string>
    <string name="shahrivar">شهریور</string>
    <string name="mehr">مهر</string>
    <string name="aban">آبان</string>
    <string name="azar">آذر</string>
    <string name="dey">دی</string>
    <string name="bahman">بهمن</string>
    <string name="esfand">اسفند</string>

    <!--Alert Dialog Strings-->
    <string name="dialog_message">آیا برای خروج از برنامه اطمینان دارید؟</string>
    <string name="dialog_yes">بله</string>
    <string name="dialog_no">خیر</string>
    <string name="dialog_comment">ثبت نظر</string>

    <!--CompassActivity-->
    <string name="compass_top_text">دستگاه شما فاقد قطب نما می باشد!</string>
    <string name="compass_bottom_back">بازگشت</string>
    <string name="compass_bottom_guidance">راهنما</string>
    <string name="DirEast">شرق</string>
    <string name="DirWest">غرب</string>
    <string name="DirNorth">شمال</string>
    <string name="DirSouth">جنوب</string>
    <string name="DirNorthEast">شمال شرقی</string>
    <string name="DirNorthNorthEast">شمال - شمال شرقی</string>
    <string name="DirEastNorthEast">شرق - شمال شرقی</string>
    <string name="DirSouthEast">جنوب شرقی</string>
    <string name="DirEastSouthEast">شرق - جنوب شرقی</string>
    <string name="DirSouthSouthEast">جنوب - جنوب شرقی</string>
    <string name="DirSouthWest">جنوب غربی</string>
    <string name="DirSouthSouthWest">جنوب - جنوب غربی</string>
    <string name="DirWestSouthWest">غرب - جنوب غربی</string>
    <string name="DirNorthwest">شمال غربی</string>
    <string name="DirWestNorthWest">غرب - شمال غربی</string>
    <string name="DirNorthNorthWest">شمال - شمال غربی</string>

    <!--Menu Strings-->
    <string name="menu_home">صفحه اصلی</string>
    <string name="menu_asma_khoda">اسماء خدا</string>
    <string name="menu_azkar_rouzaneh">اذکار روزانه</string>
    <string name="menu_jabeh_abzar">جعبه ابزاراسلامی</string>
    <string name="menu_tasbih">تسبیح</string>
    <string name="menu_zekr_shomar">ذکر شمار</string>
    <string name="menu_compass">قبله نما</string>
    <string name="menu_settings">تنظیمات</string>
    <string name="menu_change_date">تبدیل تاریخ</string>
    <string name="menu_send_program">ارسال برنامه</string>
    <string name="menu_about_us">درباره ما</string>

    <!--TasbihActivity-->
    <string name="tasbih_btn_counter">0</string>
    <string name="tasbih_btn_volume_on">🔊</string>
    <string name="tasbih_btn_volume_off">🔈</string>
    <string name="tasbih_btn_refresh">🔄</string>
    <string name="tasbih_btn_mines">↩</string>
    <string name="tasbih_sobhan_allah">سبحان الله</string>
    <string name="tasbih_alhamdo_lellah">الحمدلله</string>
    <string name="tasbih_allaho_akbar">الله اکبر</string>

    <!--ZekrShomarActivity-->
    <string name="zekr_top_text">  تا ذکر شمرده اید.</string>
    <string name="zekr_btn_counter">0</string>
    <string name="zekr_btn_volume_on">🔊</string>
    <string name="zekr_btn_volume_off">🔈</string>
    <string name="zekr_btn_refresh">🔄</string>
    <string name="zekr_btn_mines">↩</string>

    <!--ChangeDateActivity-->
    <string name="year">سال</string>
    <string name="month">ماه</string>
    <string name="day">روز</string>
    <string name="select_year">گزینش سال</string>
    <string name="select_month">گزینش ماه</string>
    <string name="select_day">گزینش روز</string>
    <string name="date_exception">تاریخ وارد شده اشتباه است!</string>
    <string name="select_type_date">گزینش گونهٔ تاریخ</string>

    <!--HolidaysActivity-->
    <string name="holidays">تعطیلات سال</string>

    <!--AsmaAllahActivity-->
    <string name="asma_allah">اسماء الله</string>

    <!--AzkarRouzanehActivity-->

    <string name="azkar_rouzaneh_shanbeh">ذکر روز شنبه</string>
    <string name="azkar_rouzaneh_yek_shanbeh">ذکر روز یکشنبه</string>
    <string name="azkar_rouzaneh_doshanbeh">ذکر روز دوشنبه</string>
    <string name="azkar_rouzaneh_se_shanbeh">ذکر روز سه شنبه</string>
    <string name="azkar_rouzaneh_chahar_shanbeh">ذکر روز چهارشنبه</string>
    <string name="azkar_rouzaneh_panj_shanbeh">ذکر روز پنجشنبه</string>
    <string name="azkar_rouzaneh_jomee">ذکر روز جمعه</string>

    <string name="azkar_rouzaneh_doa_shanbeh">یا رَبَّ الْعالَمین</string>
    <string name="azkar_rouzaneh_doa_yek_shanbeh">یا ذَالْجَلالِ وَالْاِکْرام</string>
    <string name="azkar_rouzaneh_doa_doshanbeh">یا قاضِیَ الْحاجات</string>
    <string name="azkar_rouzaneh_doa_se_shanbeh">یا اَرْحَمَ الرّاحِمین</string>
    <string name="azkar_rouzaneh_doa_chahar_shanbeh">یا حَیُّ یا قَیّوم</string>
    <string name="azkar_rouzaneh_doa_panj_shanbeh">لا اِلهَ اِلّا اللهُ الْمَلِکُ الْحَقُّ الْمُبین</string>
    <string name="azkar_rouzaneh_doa_jomee">اَللّهُمَّ صَلِّ عَلی مُحَمَّدٍ وَ آلِ مُحَمَّد</string>

    <!--AboutUsActivity-->
    <string name="about_us_bottum_message">امیدواریم با نظرات و پیشنهادات خود ما را در خدمت رسانی بهتر یاری نمایید.</string>
    <string name="about_us_description">آوای الهی، اپلیکیشنی برای مدیریت اوقات شرعی، پخش اذان و اعلام زمان باقیمانده تا وقت شرعی بعدی برای برنامه ریزی و اقامه نماز اول وقت می باشد.که البته فعلا قابل استفاده برای استان گلستان و بر پایه مذهب حنفی می باشد.</string>
    <string name="about_us_telegram">تلگرام برنامه</string>
    <string name="about_us_email">ایمیل برنامه</string>
    <string name="about_us_nazar">امتیاز به برنامه</string>
    <string name="about_us_toast_telegram">تلگرام وجود ندارد!</string>
    <string name="about_us_email_chooser">Choose Mail App</string>
    <string name="about_us_email_subject">انتقاد یا پیشنهاد به برنامه</string>
    <string name="title_activity_settings">Settings</string>
    <string name="guide_text">باید توجه داشته باشید که در بسیاری از مواقع، سنسور قطب نمای گوشی، کالیبر نیست و ممکن است در تشخیص شمال و جنوب اشتباه کند. برای کالیبره کردن سنسور قطب نما، گوشی را به حالت ۸ انگلیسی (8) در هوا حرکت دهید، تا سنسور قطب نما تنظیم شود.
روش استفاده از قبله نما
اگر گوشی شما دارای سنسورهای لازم باشد تصویر قبله نما با گردش گوشی شروع به چرخش می کند
گوشی را به صورت مسطح بر روی کف دست خود نگهدارید، در این حالت عقربه قرمز رنگ شروع به چرخش نموده و پس از توقف جهت قبله را نمایش می دهد.
ضرورت دارد یکبار در مکانی که قبله آن را از قبل می دانید روش قبله یابی را تجربه کنید.
روش استفاده از قبله نما در گوشی های فاقد سنسور
اگر گوشی شما فاقد سنسور قطب نما باشد پس از دو ثانیه پیامی در این مورد ظاهر می شود.
در این حالت جهت شمال نشان داده شده در گوشی را در جهت شمال جغرافیایی واقعی بگیرید تا جهت قبله با فلش قرمز رنگ مشخص گردد.
چرا قبله نما در گوشی من درست کار نمی کند؟
برای استفاده از قبله نما باید گوشی شما مجهز به سنسور قطب نما باشد.
همچنین دقت قبله نما کاملا بستگی به دقت و حساسیت سنسور قطب نمای گوشی شما دارد.
با توجه به تمام موارد بالا باز هم قبله نما درست کار نمی کند
اگر با رعایت تمام موارد ذکر شده باز هم قبله نما در گوشی شما جهت درست رانشان نمی دهد بهتر است از گوشی خود جهت قبله نمایی استفاده نکنید.
این احتمال می رود که سنسور گوشی شما ضعیف بوده و یا کالیبره نشده باشد.
چطور جهت یابی کنیم؟
برای استفاده از قطب نما کافیست به دور از میدان مغناطیسی گوشی را به صورت مسطح روی کف دست خود قرار دهید، بعد از ثابت شدن عقربه، چهار جهت اصلی سمت جهت ها را نشان می دهند.
سلب مسئولیت
این برنامه صرفاً جهت کمک به قبله یابی تعبیه شده و این برنامه مسئولیتی در قبال خطاهای احتمالی سنسورهای گوشی ندارد.








این برنامه صرفاً جهت کمک به قبله یابی تعبیه شده و این برنامه مسئولیتی در قبال خطاهای احتمالی سنسورهای گوشی ندارد.
این برنامه صرفاً جهت کمک به قبله یابی تعبیه شده و این برنامه مسئولیتی در قبال خطاهای احتمالی سنسورهای گوشی ندارد.
این برنامه صرفاً جهت کمک به قبله یابی تعبیه شده و این برنامه مسئولیتی در قبال خطاهای احتمالی سنسورهای گوشی ندارد.
این برنامه صرفاً جهت کمک به قبله یابی تعبیه شده و این برنامه مسئولیتی در قبال خطاهای احتمالی سنسورهای گوشی ندارد.
این برنامه صرفاً جهت کمک به قبله یابی تعبیه شده و این برنامه مسئولیتی در قبال خطاهای احتمالی سنسورهای گوشی ندارد.
این برنامه صرفاً جهت کمک به قبله یابی تعبیه شده و این برنامه مسئولیتی در قبال خطاهای احتمالی سنسورهای گوشی ندارد.
این برنامه صرفاً جهت کمک به قبله یابی تعبیه شده و این برنامه مسئولیتی در قبال خطاهای احتمالی سنسورهای گوشی ندارد.
این برنامه صرفاً جهت کمک به قبله یابی تعبیه شده و این برنامه مسئولیتی در قبال خطاهای احتمالی سنسورهای گوشی ندارد.
این برنامه صرفاً جهت کمک به قبله یابی تعبیه شده و این برنامه مسئولیتی در قبال خطاهای احتمالی سنسورهای گوشی ندارد.
این برنامه صرفاً
</string>

    <!--CalendarActivity-->
    <string name="calendar_top_today_text">امروز</string>
    <string name="calendar_top_button_mahaneh_text">ماهانه</string>
    <string name="calendar_top_button_rouzaneh_text">روزانه</string>
    <string name="calendar_non_event">هیچ رویدادی وجود ندارد.</string>


</resources>
