<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.ZekrShomarActivity">

    <com.blackgoblin.rtltoolbar.RtlToolbar
        android:id="@+id/toolbar_zekr_shomar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="15dp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="30dp">

            <TextView
                android:id="@+id/top_text_zekr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/zekr_top_text"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/top_text_zekr2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="22sp" />

        </LinearLayout>

        <devlight.io.library.ArcProgressStackView
            android:id="@+id/apsv_zekr"
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:layout_gravity="center"
            app:apsv_animated="true"
            app:apsv_dragged="false"
            app:apsv_draw_width="15%"
            app:apsv_indicator_orientation="horizontal"
            app:apsv_leveled="false"
            app:apsv_model_bg_enabled="true"
            app:apsv_model_offset="0dp"
            app:apsv_preview_colors="@array/polluted_waves"
            app:apsv_rounded="true"
            app:apsv_shadowed="false"
            app:apsv_start_angle="270"
            app:apsv_sweep_angle="360"
            app:apsv_text_color="#00000000" />

        <Button
            android:id="@+id/btn_zekr_counter"
            style="@style/Base.DialogWindowTitleBackground.AppCompat"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:text="@string/zekr_btn_counter"
            android:textStyle="bold"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="35dp">

            <Button
                android:id="@+id/btn_zekr_volume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:text="@string/zekr_btn_volume_on"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_zekr_refresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/zekr_btn_refresh"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_zekr_mines"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/zekr_btn_mines"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

    </FrameLayout>

</android.support.constraint.ConstraintLayout>