<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.AboutUsActivity">

    <com.blackgoblin.rtltoolbar.RtlToolbar
        android:id="@+id/toolbar_about_us"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/menu_about_us"
                android:textColor="@color/textTitleColor"
                android:textStyle="bold"
                android:textSize="@dimen/toolbarTitleSize" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:src="@drawable/ic_about_us" />

        </LinearLayout>

    </com.blackgoblin.rtltoolbar.RtlToolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar_about_us"
        android:background="@color/md_blue_400"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="آوای الهی" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="version" />

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_version" />

        </LinearLayout>

        <TextView
            android:id="@+id/about_us_discription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="25dp"
            android:paddingVertical="15dp"
            android:text="@string/about_us_description" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3" />

            <LinearLayout
                android:id="@+id/about_us_telegram_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/telegram" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:padding="10dp"
                        android:text="@string/about_us_telegram"
                        android:textColor="@color/md_white_1000"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3" />

            <LinearLayout
                android:id="@+id/about_us_email_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/email"
                        android:color="@color/md_white_1000" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:padding="10dp"
                        android:text="@string/about_us_email"
                        android:textColor="@color/md_white_1000"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3" />

            <LinearLayout
                android:id="@+id/about_us_star_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="38dp"
                        android:layout_height="36dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/star" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:padding="10dp"
                        android:text="@string/about_us_nazar"
                        android:textColor="@color/md_white_1000"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/bottom_tv_about_us"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#74b8fe"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/about_us_bottum_message"
        android:textColor="#000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignTop="@id/bottom_tv_about_us"
        android:background="#74ffffff"
        android:orientation="vertical">

    </LinearLayout>

</RelativeLayout>
